--- a/lab1.html
+++ b/lab1.html
@@ -60,7 +60,7 @@
     </header>
 
     <div class="container">
-        <img src="https://scontent.fcgy2-4.fna.fbcdn.net/v/t39.30808-6/519707984_1234341991504683_6734852123141820030_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHOYD4b627jgAO8CCIyXpjHc5fIEbCqhKlzl8gRsKqEqVUjclEKsRkRyhWteg6i-fsuRxdqWsN9Z0OUm5nYuONT&_nc_ohc=JJBs31Wb73EQ7kNvwHxo8a0&_nc_oc=Adn7N4DVvUBAtE_cPffQsJsoZF_rDX_Y2uIZIbPnICmBULh6mQzqnB8Iiu_wU1BaCo4&_nc_zt=23&_nc_ht=scontent.fcgy2-4.fna&_nc_gid=4lFZU3NWvmG4kX-Aogqt1w&oh=00_Afda2oGcIkOZnqmesVzyLdVxAGYIBsBAljtpcNN0RD12SA&oe=68F3AC3E"Profile Image">
+        <img src="din.jpg">
 
 
         <p> I am IT STUDENT focus on your relevant skills, experience, and how you contribute to the field.
@@ -92,4 +92,5 @@
         </div>
     </div>
 </body>
+
 </html>
