--- a/lab3.html
+++ b/lab3.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <div class="card">
-        <img src="https://uploads.onecompiler.io/43uwvfbzb/43vmgmzd3/448.jpg" alt=" Geraldine
+        <img src="din.jpg" Geraldine
         Bauden">
         <p>Passionate about clean UI and accessible web experiences.</p>
     </div>
 </body>
+
 </html>
