--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <aside class="hero-right profile-card">
-          <img class="avatar" src="https://scontent.fdvo2-2.fna.fbcdn.net/v/t39.30808-6/519707984_1234341991504683_6734852123141820030_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHOYD4b627jgAO8CCIyXpjHc5fIEbCqhKlzl8gRsKqEqVUjclEKsRkRyhWteg6i-fsuRxdqWsN9Z0OUm5nYuONT&_nc_ohc=JJBs31Wb73EQ7kNvwG5Wp-L&_nc_oc=Admo5LFK9SW8dCpJvwuOGMabU_0YUHy_0OyBNHb9mdOZ51-OWKUlMjKDL78gITg89K8&_nc_zt=23&_nc_ht=scontent.fdvo2-2.fna&_nc_gid=7ywagYyptyBcwPFrqEHtvA&oh=00_AffjZzQcT9onY7q1vTD9dg8ZNzoO0nHZjnmPAV6iGniIOA&oe=68F3AC3E" alt="Geraldine Bauden portrait">
+          <img class="avatar" src="din.jpg" alt="Geraldine Bauden portrait">
           <h3>Geraldine N. Bauden</h3>
           <p class="muted">Diploma — Information Technology (Student)</p>
           <div class="social">
@@ -162,3 +162,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
