--- a/lab5.html
+++ b/lab5.html
@@ -1,58 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dark Mode Toggle</title>
-<style>
-  
-  body {
-    background-color: violet;
-    color: yellow;
-    font-family: Arial, sans-serif;
-    padding: 20px;
-  }
+  <meta charset="UTF-8">
+  <title>Kingrey Tabalba</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: white;
+      color: black;
+      text-align: center;
+      padding: 20px;
+    }
 
-  .image-container img {
-    max-width: 300px;
-    height: auto;
-    border: 2px solid black;
-  }
+    .dark-mode {
+      background-color: #121212;
+      color: white;
+    }
 
- 
-  .dark-mode {
-    background-color:violet ;
-    color: #f0f0f0;
-  }
+    .image-container {
+      margin: 20px 0;
+    }
 
-  .dark-mode .image-container img {
-    border-color: #f0f0f0;
-  }
+    .image-container img {
+      max-width: 300px;
+      border-radius: 12px;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+    }
 
-  button {
-    margin-top: 20px;
-    padding: 10px 15px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-</style>
+    button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 8px;
+      background: black;
+      color: white;
+      cursor: pointer;
+      font-size: 16px;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background: white;
+      color: black;
+      border: 1px solid black;
+    }
+  </style>
 </head>
-
 <body>
-<h1>GERALDINE BAUDEN</h1>
-<p>Light and Dark Mode Toggle Example</p>
-<div class="image-container">
-  
-</div>
+  <h1>Kingrey Tabalba</h1>
+  <p>Toggle Example</p>
 
-<button onclick="toggleDarkMode()">Toggle Dark Mode</button>
+  <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
 
-<script>
-  function toggleDarkMode() {
-    document.body.classList.toggle("dark-mode");
-  }
-</script>
+  <script>
+    function toggleDarkMode() {
+      document.body.classList.toggle("dark-mode");
+    }
+  </script>
 </body>
-
 </html>
