--- a/lab5.html
+++ b/lab5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>maudin</title>
+  <title>mauden</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -46,7 +46,7 @@
   </style>
 </head>
 <body>
-  <h1>baudin</h1>
+  <h1>bauden</h1>
   <p>Toggle Example</p>
 
   <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
@@ -58,4 +58,5 @@
   </script>
 </body>
 </html>
+
 
